feat: add measure tools, 3857 projection for analysis, misc cleanup
- Backend: distance/area/length/centroid JTS endpoints
- Frontend: new measure tab with Point/LineString/Polygon draw
- All analysis now uses EPSG:3857 (meters) instead of EPSG:4326
- Buffer distance changed from degrees to meters
- Remove dead updateGeometry mapper method
- Fix OL ref->shallowRef in both spatial pages
- Clean up wkt field filter, relation labels, redundant startModify